Fixing auth, streamlining code, working on SSO redirects
